@@ -20,6 +20,7 @@ export(fisherUMI4C)
 export(getViewpointCoordinates)
 export(groupsUMI4C)
 export(makeUMI4C)
+export(makeWindowFragments)
 export(plotDifferential)
 export(plotDomainogram)
 export(plotGenes)
